--- a/webroot/index.html
+++ b/webroot/index.html
@@ -11,11 +11,14 @@
     <nav class="light-blue lighten-1" role="navigation">
       <div class="nav-wrapper container"><a id="logo-container" href="#" class="brand-logo">Coffee</a>
         <ul class="right hide-on-med-and-down">
-          <li><a href="#">Navbar Link</a></li>
+          <li><a href="#">Raiz</a></li>
+          <li><a href="#/prueba1">prueba1</a></li>
+          <li><a href="#/prueba2">prueba2</a></li>
+          <li><a href="#/prueba3">prueba3</a></li>
         </ul>
 
         <ul id="nav-mobile" class="side-nav">
-          <li><a href="#">Navbar Link</a></li>
+          <li><a href="#">Navbar Link2</a></li>
         </ul>
         <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
       </div>
@@ -77,25 +80,6 @@
       </div>
     </footer>
 
-    <script>
-      var author = function () { console.log("author"); };
-      var books = function () { console.log("books"); };
-      var viewBook = function (bookId) {
-        console.log("viewBook: bookId is populated: " + bookId);
-      };
-
-      var routes = {
-        '/author': author,
-        '/books': [books, function() {
-          console.log("An inline route handler.");
-        }],
-        '/books/view/:bookId': viewBook
-      };
-
-      var router = Router(routes);
-
-      router.init();
-    </script>
 
     <script type="text/javascript" src="bower_components/director/build/director.min.js"></script>
     <script type="text/javascript" src="bower_components/handlebars/handlebars.js"></script>
@@ -103,6 +87,7 @@
     <script type="text/javascript" src="bower_components/materialize/dist/js/materialize.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
+    <script type="text/javascript" src="js/prueba.js"></script>
   </body>
 
 </html>
