Agregando template de handlebars

--- a/webroot/index.html
+++ b/webroot/index.html
@@ -7,6 +7,14 @@
   </head>
 
   <body>
+    <script id="entry-template" type="text/x-handlebars-template">
+        <div class="row">
+            <div class="icon-block">
+              <h1 class="header center orange-text">Handlebars title: {{title}}</h1>
+              <h5 class="center">HandleBars Mode On: {{body}}</h5>
+            </div>
+        </div>
+    </script>
 
     <nav class="light-blue lighten-1" role="navigation">
       <div class="nav-wrapper container"><a id="logo-container" href="#" class="brand-logo">Coffee</a>
